<resources>
    <string name="app_name">Surprise!</string>
    <string name="preference_password_key">preference_password</string>
    <string name="preference_nickname_key">preference_nickname</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password_again">password again</string>
    <string name="phone_number">phone number</string>
    <string name="sign_in">SIGN IN</string>
    <string name="phone_number_verification">PHONE NUMBER VERIFICATION</string>
    <string name="verify">VERIFY</string>
    <string name="set_phone_number">SET PHONE NUMBER</string>
    <string name="well_done">WELL DONE!</string>
    <string name="finish">FINISH</string>
    <string name="created_account_message">You have successfully create your account!</string>
    <string name="name">name</string>
    <string name="date_of_birth">date of birth</string>

    <string name="preference_key_user_nickname">preference_key_user_nickname</string>
    <string name="preference_key_user_email">preference_key_user_email</string>
    <string name="preference_key_user_password">preference_key_user_password</string>
    <string name="preference_key_user_screen_width">preference_key_screen_width</string>
    <string name="preference_key_user_screen_height">preference_key_screen_height</string>
    <string name="preference_key_user_phone">preference_key_user_phone</string>
    <string name="preference_key_user_day_of_birth">preference_key_user_day_of_birth</string>
    <string name="preference_key_user_month_of_birth">preference_key_user_month_of_birth</string>
    <string name="preference_key_user_year_of_birth">preference_key_user_year_of_birth</string>
    <string name="extra_key_user_uid">EXTRA_KEY_USER_UID</string>
    <string name="quit_confirm_message">Are you sure you want quit?</string>
    <string name="confirm_quit_title">Confirm quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="find_friends">FIND FRIENDS</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="no_friends_found">No friends found</string>
    <string name="friends">Friends</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="choose_friend">Choose a friend</string>
    <string name="online">online</string>
    <string name="choose_wallpaper">Choose a wallpaper</string>
    <string name="invite_friends_prompt">Invite friend via…</string>
    <string name="no_wallpapers_found">No wallpapers found</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose category</string>


</resources>
