<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_people"
            android:icon="@drawable/ic_people"
            android:tint="@color/color_primary"
            android:title="@string/friends" />

        <item
            android:id="@+id/menu_item_wallpaper"
            android:icon="@drawable/ic_wallpapers"
            android:tint="@color/color_primary"
            android:title="@string/wallpapers" />
    </group>

    <group
        android:id="@+id/menu_group_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/ic_setting_light"
            android:tint="@color/color_primary"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_item_log_out"
            android:icon="@drawable/ic_log_out"
            android:tint="@color/color_primary"
            android:title="@string/log_out" />
    </group>
</menu>