<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fistandantilus.surprise.ui.activities.SignUpActivity">

    <TextView
        android:id="@+id/sign_up_done_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/well_done"
        android:textColor="#afff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_up_done_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/created_account_message"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#afff"
        android:textStyle="bold" />


    <Button
        android:id="@+id/phone_verify_confirm_button"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/button_bg_blue"
        android:onClick="onContinueClick"
        android:text="@string/finish" />

</RelativeLayout>
