<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary"
        tools:context="com.fistandantilus.surprise.ui.activities.SignUpActivity">


        <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#afff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/sign_up_confirm_button"
            android:layout_below="@id/sign_up_title"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/sign_up_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/sign_up_name"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/name"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/sign_up_email"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/sign_up_password"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/sign_up_password_confirm"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/password_again"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/sign_up_set_date_of_birth"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:focusable="false"
                    android:onClick="onSetDateOfBirthClick"
                    android:text="@string/date_of_birth"
                    android:textStyle="italic" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/sign_up_confirm_button"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_bg_blue"
            android:onClick="onConfirmSignUpClick"
            android:text="@string/set_phone_number" />
    </RelativeLayout>


    <FrameLayout
        android:id="@+id/sign_up_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#68000000"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</FrameLayout>