<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/friends_fragment_empty_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/no_friends_found"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_primary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/friends_fragment_find_friends"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_bg_blue"
            android:text="@string/find_friends" />

        <Button
            android:id="@+id/friends_fragment_invite_friends"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_bg_red"
            android:text="@string/invite_friends" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/friends_fragment_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/friends_fragment_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/friends_fragment_floating_action_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            fab:menu_colorNormal="@color/button_bg_red"
            fab:menu_colorPressed="@color/button_bg_red_highlighted"
            fab:menu_colorRipple="@color/button_bg_red_highlighted"
            fab:menu_fab_hide_animation="@anim/fab_slide_out_to_right"
            fab:menu_fab_show_animation="@anim/fab_slide_in_from_right"
            fab:menu_icon="@drawable/ic_add"
            fab:menu_openDirection="up">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/friends_fragment_fab_find_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                fab:fab_colorNormal="@color/button_bg_blue"
                fab:fab_colorPressed="@color/button_bg_blue_highlighted" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/friends_fragment_fab_invite_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share"
                fab:fab_colorNormal="@color/button_bg_blue"
                fab:fab_colorPressed="@color/button_bg_blue_highlighted" />

        </com.github.clans.fab.FloatingActionMenu>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/friends_fragment_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#68000000"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>


</RelativeLayout>